--- a/package.json
+++ b/package.json
@@ -22,6 +22,8 @@
     "jquery": "^2.2.0",
     "jsdom": "^8.0.2",
     "jshint": "^2.8.0",
+    "mongoose": "^4.4.3",
+    "node-mongo-seeds": "^2.2.7",
     "node-yelp": "0.0.3",
     "oauth-signature": "^1.3.1"
   },
