--- a/package.json
+++ b/package.json
@@ -3,7 +3,10 @@
   "version": "1.0.0",
   "description": "map-neighborhood",
   "main": "gulpfile.js",
-  "dependencies": {
+  "devDependencies": {
+    "gulp-bower-src": "^0.1.0",
+    "gulp-foreach": "^0.1.0",
+    "gulp-sequence": "^0.4.4",
     "del": "^2.2.0",
     "express": "^4.13.4",
     "gulp": "^3.9.0",
@@ -24,11 +27,6 @@
     "mongoose": "^4.4.3",
     "node-yelp": "0.0.3",
     "oauth-signature": "^1.3.1"
-  },
-  "devDependencies": {
-    "gulp-bower-src": "^0.1.0",
-    "gulp-foreach": "^0.1.0",
-    "gulp-sequence": "^0.4.4"
   },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
