--- a/package.json
+++ b/package.json
@@ -8,7 +8,6 @@
     "gulp-foreach": "^0.1.0",
     "gulp-sequence": "^0.4.4",
     "del": "^2.2.0",
-    "express": "^4.13.4",
     "gulp": "^3.9.0",
     "gulp-cache": "^0.4.1",
     "gulp-concat": "^2.6.0",
@@ -21,12 +20,8 @@
     "gulp-uglify": "^1.5.1",
     "gulp-usemin": "^0.3.16",
     "imagemin-pngquant": "^4.2.0",
-    "jquery": "^2.2.0",
     "jsdom": "^8.0.2",
-    "jshint": "^2.8.0",
-    "mongoose": "^4.4.3",
-    "node-yelp": "0.0.3",
-    "oauth-signature": "^1.3.1"
+    "jshint": "^2.8.0"
   },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
@@ -40,5 +35,12 @@
   "bugs": {
     "url": ""
   },
-  "homepage": "map-neighborhood"
+  "homepage": "map-neighborhood",
+  "dependencies": {
+    "jquery": "^2.2.0",
+    "express": "^4.13.4",
+    "mongoose": "^4.4.3",
+    "node-yelp": "0.0.3",
+    "oauth-signature": "^1.3.1"
+  }
 }
